# oboe-tone-generator

./: .gitmodules  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/omsi/nativeaudiotest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/omsi/nativeaudiotest/: AudioPlayer.kt  MainActivity.kt
app/src/main/java/com/omsi/nativeaudiotest/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/omsi/nativeaudiotest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
iolib/src/main/cpp/: CMakeLists.txt
iolib/src/main/cpp/player/: SimpleMultiPlayer.cpp  SimpleMultiPlayer.h
parselib/src/main/cpp/: CMakeLists.txt
tonegenerator/: build.gradle
tonegenerator/src/main/cpp/: CMakeLists.txt  OboeAudioJNI.cpp  SimpleToneMaker.cpp  SimpleToneMaker.h
tonegenerator/src/main/java/com/omsi/tonegenerator/: CustomToneGenerator.kt
toneplayer/: build.gradle.kts
toneplayer/src/main/cpp/: CMakeLists.txt  TonePlayerJNI.cpp
toneplayer/src/main/java/com/omsi/toneplayer/: TonePlayer.kt
